Repair elFinder. Upgrade symfony to 3.4

--- a/class/Module/Market/config.yml
+++ b/class/Module/Market/config.yml
@@ -3,7 +3,7 @@ parameters:
 services:
     market.dashbord.subscriber:
         class: Module\Market\Subscriber\DashboardSubscriber
-        arguments: [ @tpl, @data.manager ]
+        arguments: [ "@tpl", "@data.manager" ]
         tags:
             - { name: event.subscriber }
 
