--- a/class/Module/Catalog/config.yml
+++ b/class/Module/Catalog/config.yml
@@ -1,11 +1,11 @@
 services:
     catalog.product.form:
         class: Module\Catalog\Form\CatalogForm
-        arguments: [ @data.manager ]
+        arguments: [ "@data.manager" ]
 
     catalog.comment.subscriber:
         class: Module\Catalog\Subscriber\CommentSwiftMailerSubscriber
-        arguments: [ %email_for_comments% ]
+        arguments: [ "%email_for_comments%" ]
         calls:
             - [ setContainer, [ "@service_container" ] ]
         tags:
@@ -20,6 +20,6 @@ services:
 
     catalog.sitemap.subscriber:
         class: Module\Catalog\Subscriber\SiteMapSubscriber
-        arguments: [ @data.manager ]
+        arguments: [ "@data.manager" ]
         tags:
             - { name: event.subscriber }
