--- a/composer.json
+++ b/composer.json
@@ -30,28 +30,27 @@
     "require-dev": {
         "behat/behat": "~3.0",
         "behat/mink-extension": "~2.0",
-        "behat/mink": "~1.5",
-        "behat/mink-browserkit-driver": "1.1.*",
-        "behat/mink-goutte-driver": "1.0.*",
-        "behat/mink-selenium2-driver": "~1.1",
-        "phpunit/php-invoker": "1.1.*",
-        "phpunit/phpunit": "3.7.*",
-        "phpunit/phpunit-mock-objects": "1.2.*",
-        "phpunit/php-code-coverage": "1.2.*",
-        "phpunit/php-file-iterator": "1.3.*"
+        "behat/mink": "~1.6",
+        "behat/mink-browserkit-driver": "1.3.*",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/mink-selenium2-driver": "^1.1",
+        "phpunit/php-invoker": "^1.1",
+        "phpunit/phpunit": "^5.7"
     },
     "require": {
-        "php": ">=5.5",
-        "symfony/symfony": "~2.7",
+        "php": ">=5.6",
+        "symfony/symfony": "3.4.*",
+        "ocramius/proxy-manager": "1.0.*",
         "doctrine/common": "~2.6",
-        "doctrine/dbal": ">=2.5.4",
-        "doctrine/cache": "~1.6",
-        "doctrine/migrations": "~1.4",
+        "doctrine/annotations": "1.4.*",
+        "doctrine/dbal": ">=2.5.4,<2.6",
+        "doctrine/cache": "1.6.*",
+        "doctrine/migrations": ">=1.5,<1.6",
         "smarty/smarty": "3.1.19",
         "incenteev/composer-parameter-handler": "~2.0",
-        "monolog/monolog": "~1.6",
-        "swiftmailer/swiftmailer": "~5.0",
-        "studio-42/elfinder": "~2.1"
+        "monolog/monolog": "~1.23",
+        "swiftmailer/swiftmailer": "~5.0,<6.0",
+        "studio-42/elfinder": "2.1.*"
     },
     "scripts": {
         "post-install-cmd": [
