--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: php
 php:
-  - 5.5
   - 5.6
-  - 7.0
 
 script: phpunit -c test/phpunit.xml
 
 before_script:
   - curl -sS https://getcomposer.org/installer | php
-  - php composer.phar install --prefer-dist -n
+  - php composer.phar install --prefer-dist -o -n
