--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "phpunit/phpunit": "^5.7"
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=5.6,<7.0",
         "symfony/symfony": "3.4.*",
         "ocramius/proxy-manager": "1.0.*",
         "doctrine/common": "~2.6",
