--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,10 @@
     },
     "require": {
         "php": ">=5.6,<7.0",
+        "ext-gd": "*",
+        "ext-xml": "*",
+        "ext-curl": "*",
+        "ext-mbstring": "*",
         "symfony/symfony": "3.4.*",
         "ocramius/proxy-manager": "1.0.*",
         "doctrine/common": "~2.6",
