--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "siteforever/site-forever-cms",
+  "name": "siteforever/cms",
   "description": "Simple CMS for PHP and MySQL",
   "keywords": [
     "siteforever",
